--- a/index.html
+++ b/index.html
@@ -11,5 +11,18 @@
 </head>
 <body>
     <h1>Go Away World!</h1>
+    <header>Header Content</header>
+    <section>
+        Main Image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running locations, distances and times
+    </section>
+    <footer>
+        Social links here
+    </footer>
 </body>
 </html>
