--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </head>
 
 <body>
-    <h1>Go Away World!</h1>
+    
     <header>
         <a href="index.html">
-            <h1>Love Running</h1>
+            <h1 id="logo">Love Running</h1>
         </a>
-        <nav>
-            <ul>
-                <li>
+        <nav> 
+            <ul id="menu" class="reverse">
+                <li >
                     <a href="index.html">Home</a>
                 </li>
                 <li>
