--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav> 
             <ul id="menu" class="reverse">
                 <li >
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
                     <a href="#">Gallery</a>
