--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
             </ul>
         </nav>
     </header>
-    <section>
-        Main Image
+    <section id="hero-outer">
+       <div id="hero-image"></div>
+       <div id="cover-text">
+        <h2>Hate Running</h2>
+        <h3>Dublin Docklands and Phoenix Park</h3>
+       </div>
     </section>
     <section>
         Club Ethos
