--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </section>
     <section id="club-ethos">
-        <h1>Why I Hate Running</h1>
+        <h2 id="welcome">Why I Hate Running</h2>
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>Feel Grotty</h2>
@@ -56,9 +56,32 @@
                 <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins make
                     you more energetic, more awake and, yes, happier.</p>
             </div>
-            <div id="right-about">Right</div>
-            <div id="centre-about">Centre</div>
         </div>
+        <div id="right-about">
+            <div class="right-about-heading">
+                <h2>Get Ignored</h2>
+                <hr>
+                <p>When we run with others, we can run farther and faster more easily. Social running can pull you out
+                    of a running funk or low mood, inspire you to try new events.<p>
+            </div>
+            <div class="right-about-heading">
+                <h2>Feel Knackered</h2>
+                <hr>
+                <p>
+                    Running strengthens your heart by pumping blood more effectively through your body.
+                </p>
+            </div>
+        </div>
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg">
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     </section>
     <section>
         Running locations, distances and times
