--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <h3>09:30</h3>
         </div>
         <div>
-            <h2>Coffee <i class="fa-duotone fa-mug-hot"></i></h2>
+            <h2>Coffee <i class="fa-solid fa-mug-hot"></i></h2>
             <h3>Sunday</h3>
             <h3>0k</h3>
             <h3>The Marker Hotel</h3>
@@ -118,7 +118,25 @@
         </div>
     </section>
     <footer>
-        Social links here
+        <ul>
+
+            <li>
+                <a href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in new tab)"><i class="fa-brands fa-square-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
 
     <!-- Font Awesome script-->
