--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="#">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
                     <a href=#>Sign Up</a>
@@ -37,21 +37,21 @@
     <section id="hero-outer">
         <div id="hero-image"></div>
         <div id="cover-text">
-            <h2>Hate Running</h2>
+            <h2>Love Running</h2>
             <h3>Dublin Docklands and Phoenix Park</h3>
         </div>
     </section>
     <section id="club-ethos">
-        <h2 id="welcome">Why I Hate Running</h2>
+        <h2 id="welcome">Why I Love Running</h2>
         <div id="left-about">
             <div class="left-about-heading">
-                <h2>Feel Grotty <i class="fa-solid fa-heart-pulse"></i></h2>
+                <h2>Feel Good <i class="fa-solid fa-heart"></i></h2>
                 <hr>
                 <p> Since it improves aerobic fitness, running is a great way to help improve your cardiovascular
                     health. Plus, it burns calories and can build strength.</p>
             </div>
             <div class="left-about-heading">
-                <h2>Feel Bad<i class="fa-solid fa-face-tired"></i></h2>
+                <h2>Feel Healthy <i class="fa-solid fa-ranking-star"></i></h2>
                 <hr>
                 <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins make
                     you more energetic, more awake and, yes, happier.</p>
@@ -59,13 +59,13 @@
         </div>
         <div id="right-about">
             <div class="right-about-heading">
-                <h2>Get Ignored<i class="fa-solid fa-globe"></i></h2>
+                <h2>Get Company<i class="fa-solid fa-globe"></i></h2>
                 <hr>
                 <p>When we run with others, we can run farther and faster more easily. Social running can pull you out
                     of a running funk or low mood, inspire you to try new events.<p>
             </div>
             <div class="right-about-heading">
-                <h2>Feel Knackered <i class="fas fa-dumbbell"></i></h2>
+                <h2>Feel Fit <i class="fas fa-dumbbell"></i></h2>
                 <hr>
                 <p>
                     Running strengthens your heart by pumping blood more effectively through your body.
@@ -118,7 +118,7 @@
         </div>
     </section>
     <footer>
-        <ul>
+        <ul class="social-networks">
 
             <li>
                 <a href="https://www.facebook.com" target="_blank" rel="noopener"
